# devchat-services

./: pyproject.toml
devchat_services/ide_services/: vscode_services.py
