[tool.poetry]
name = "devchat-services"
version = "0.1.0"
description = ""
authors = ["bobo <bobo.yang@merico.dev>"]
readme = "README.md"
packages = [{include = "devchat_services"}]

[tool.poetry.dependencies]
python = "^3.8"
openai = "^1.10.0"
requests = "^2.31.0"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
